--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./main.css" />
-    <title>Booking App</title>
+    <title>hotel-booking-app-css</title>
   </head>
   <body>
-    <h1 class="header">Hello from booking app</h1>
+    <h1 class="header">Hello World!</h1>
   </body>
 </html>
