--- a/index.html
+++ b/index.html
@@ -5,13 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700"
+      href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,600"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./base.css" />
+    <link rel="stylesheet" href="./layout.css" />
+    <link rel="stylesheet" href="./components.css" />
     <link rel="stylesheet" href="./main.css" />
     <title>hotel-booking-app-css</title>
   </head>
   <body>
-    <h1 class="header">Hello World!</h1>
+    <div class="container">
+      <header class="header">
+        <!-- <svg class="logo">
+          <use xLink:href="./img/SVG/#react" />
+        </svg> -->
+        <!-- src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50" -->
+        <img src="./img/SVG/react.svg" alt="logo" class="logo" />
+        <form action="" class="search">
+          <input
+            type="text"
+            class="search__input"
+            placeholder="Search hotels"
+          />
+          <button class="search__button">
+            <svg class="search__icon">
+              <use xLink:href="./img/sprite.svg#icon-magnifying-glass"></use>
+            </svg>
+          </button>
+        </form>
+
+        <nav class="user-nav">
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="./img/sprite.svg#icon-bookmark"></use>
+            </svg>
+            <span class="user-nav__notification">7</span>
+          </div>
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="./img/sprite.svg#icon-chat"></use>
+            </svg>
+            <span class="user-nav__notification">13</span>
+          </div>
+          <div class="user-nav__user">
+            <img
+              src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50"
+              alt="user-photo"
+              class="user-nav__user-photo"
+            />
+            <span class="user-nav__user-name">Richard</span>
+          </div>
+        </nav>
+      </header>
+      <div class="content">
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="./img/sprite.svg#icon-home"></use>
+                </svg>
+                <span class="">Hotel</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use
+                    xlink:href="./img/sprite.svg#icon-aircraft-take-off"
+                  ></use>
+                </svg>
+                <span class="">Flight</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <span class="">Car Rental</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="./img/sprite.svg#icon-map"></use>
+                </svg>
+                <span class="">Tours</span>
+              </a>
+            </li>
+          </ul>
+          <div class="legal">&copy: Hello World</div>
+        </nav>
+        <main class="hotel-view">
+          Hotel View
+        </main>
+      </div>
+    </div>
   </body>
 </html>
