--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
                 possimus at, eaque ut.
               </p>
               <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi
-                asperiores reprehenderit consectetur saepe eveniet porro, nisi
-              </p>
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste reprehenderit quaerat, assumenda deleniti omnis sint ex incidunt, rem ipsa eaque ipsum veritatis molestiae natus quisquam explicabo quam repudiandae ut nisi?
+                </p>
+                <p class="paragraph">
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor quas voluptas, possimus cumque dolores esse hic a obcaecati est, qui magni? Eos maiores sed neque optio animi dignissimos ipsum?
+                  </p>
               <ul class="list">
                 <li class="list__item">Close to the beach</li>
                 <li class="list__item">Breakfast included</li>
